<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_countdown" />
        <Button
            android:id="@+id/btn_open_toast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toast_open" />
        <Button
            android:id="@+id/btn_next_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_activity" />
        <TextView
            android:id="@+id/tv_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/loop_value"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>


</ScrollView>